# ssh-group-order-repo

./: .gitignore  Dockerfile  Prototype Report.md  README.md  app.json  package-lock.json  package.json
.github/workflows/: python-tests.yml
app/(tabs)/: checkout-screen.tsx  group-order.tsx  index.tsx  marketplace.tsx  profile.tsx
app/navigation/: AppNavigator.tsx
backend/: main.py  models.py  pyproject.toml  tests.py
backend/consoleVersion/: main.py  products.csv
frontend/: package-lock.json  package.json
frontend/app/: +not-found.tsx  _layout.tsx
frontend/app/(tabs)/: index.tsx  profile.tsx
