[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Aarij Khan <aarijomark@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
psycopg2 = "^2.9.10"
uuid = "^1.30"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
